fixed contact email font size on mobile

--- a/css/agency.css
+++ b/css/agency.css
@@ -341,6 +341,13 @@ header.masthead .intro-text .intro-heading {
   margin-bottom: 15px;
 }
 
+@media (max-width: 768px) {
+  .portfolio-modal .modal-content h2 {
+    font-size: 2em;
+    margin-bottom: 15px;
+  }
+}
+
 .portfolio-modal .modal-content p {
   margin-bottom: 30px;
 }
@@ -625,6 +632,12 @@ section#contact .h1 .h2 .h3 .h4 {
   color:white;
 }
 
+@media (max-width: 768px) {
+  section#contact .email {
+    font-size: 100%;
+  }
+}
+
 section#contact .layer {
     background-color: rgba(248, 247, 216, 0.7);
     position: absolute;
@@ -729,9 +742,11 @@ ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons l
 
 @media (max-width: 768px) {
   .carousel-img img {
-    /*max-height: 350px !important;
+    max-height: 350px !important;
     width: auto !important;
-    display: block;*/
+    display: block;
+   /* width: 50vw;
+    height: auto;*/
   }
 }
 
